VTK-1154 VTK-1166 some fixes with button styling, spacing on save buttons and width of userTitle

--- a/src/main/resources/web/themes/default/editor.css
+++ b/src/main/resources/web/themes/default/editor.css
@@ -74,7 +74,7 @@ div.properties {
 }
 
 div.save-cancel{
-	margin-top:1em;
+	/* margin-top:1em; */
 }
 
 * html div.save-cancel{
@@ -199,6 +199,10 @@ div.hide-introduction-image{
 
 /* ****** START: Introduction styling */
 
+#resource\.userTitle {
+  width: 40%;	
+}
+
 span.input-description{
     font-size: .8em;
 }
@@ -258,7 +262,7 @@ div.picture {
 }
 
 div.picture input{
-  width: 200px;
+  width: 180px;
   float: left;
   position: relative;
   margin: 0;
@@ -274,10 +278,7 @@ div.picture input{
 div.picture button{
   float: left;
   position: relative;
-  font-size: 12px;
-  font-familiy: Arial, sans-serif;
   margin: 0;
-  padding: 1px 5px;
 }
 
 * html div.picture button {
@@ -321,13 +322,13 @@ div.caption {
   float: left;
   position: relative;
   overflow: hidden;
-  margin-top: -98px;
+  margin-top: -100px;
 }
 
 /* IE6 fix */
 * html div.caption {
    width: 327px; 
-   margin-top: -96px;
+   margin-top: -98px;
 }
 
 div.caption textarea{
